# NJUxklogin

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
njuxklogin/: __init__.py  _authenticator.py  _captcha.py  _des_encrypt.py
njuxklogin/models/: title_model.onnx
